打包方式/启动方式

--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,21 @@
     </properties>
 
     <dependencies>
+        <!--默认启动项-->
+        <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        -->
+        <!--tomcat启动项-->
+        <!--&lt;!&ndash;-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--&ndash;&gt;-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
